Updated MA 16 translation and fixed a couple consistency issues.

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -466,10 +466,10 @@ The monks accepted his instructions and listened.
 144\. “What are ten things to be ceased? The ten wrong practices: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, wrong <em>samādhi</em>, wrong liberation, and wrong knowledge.
 {:#p144}
 
-145\. “What are ten things that retreat? The path of ten unskillful actions: Physically killing, stealing, and engaging in sex; verbally being divisive, being abusive, speaking falsely, and speaking frivolously; and mentally being greedy, being jealous, and having wrong view.
+145\. “What are ten things that retreat? The path of ten unskillful actions: Physically killing, stealing, and engaging in sex; verbally being duplicitous, being abusive, speaking falsely, and speaking frivolously; and mentally being greedy, being jealous, and having wrong view.
 {:#p145}
 
-146\. “What are ten things that advance? The ten skillful actions: Physically not killing, not stealing, and not engaging in sex; verbally not being divisive, not being abusive, not speaking falsely, and not speaking frivolously; and mentally not being greedy, not being jealous, and not having wrong view.
+146\. “What are ten things that advance? The ten skillful actions: Physically not killing, not stealing, and not engaging in sex; verbally not being duplicitous, not being abusive, not speaking falsely, and not speaking frivolously; and mentally not being greedy, not being jealous, and not having wrong view.
 {:#p146}
 
 147\. “What are ten things that are difficult to understand? The ten noble dwellings:[\[14\]](#n14){:#ref14} First, a monk eliminates five limbs. Second, he achieves six limbs. Third, he guards one thing.[\[15\]](#n15){:#ref15} Fourth, he supports four things. Fifth, he ceases heterodox truths. Sixth, he has a surpassing and marvelous pursuit. Seventh, he perceives the unmuddied. Eighth, he has stopped physical conduct. Ninth, his mind is liberated. Tenth, his wisdom is liberated.
