--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -135,11 +135,11 @@ next: DA_13.html
   </tr>
   <tr>
     <td class='ch' title='t1.1.59c22'>「云何七法向惡趣？ 謂殺生、不與取、婬逸、妄語、兩舌、惡口、綺語。</td>
-    <td id='p28'>28. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, adultery, lying, divisive speech, harsh speech, and flattery.</td>
+    <td id='p28'>28. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, adultery, lying, duplicity, harsh speech, and flattery.</td>
   </tr>
   <tr>
     <td class='ch' title='t1.1.59c24'>「云何七法向善趣？ 謂不殺生、不盜、不婬、不欺、不兩舌、不惡口、不綺語。</td>
-    <td id='p29'>29. “What are seven things that lead to good destinies? Not killing beings, not stealing, not committing adultery, not being deceptive, not speaking divisively, not speaking harshly, and not being flattering.</td>
+    <td id='p29'>29. “What are seven things that lead to good destinies? Not killing beings, not stealing, not committing adultery, not being deceptive, not being duplicitous, not speaking harshly, and not being flattering.</td>
   </tr>
   <tr>
     <td class='ch' title='t1.1.59c25'>「云何七法向涅槃？ 謂七覺意： 念覺意、擇法覺意、精進覺意、猗覺意、定覺意、喜覺意、捨覺意。</td>
@@ -183,11 +183,11 @@ next: DA_13.html
   </tr>
   <tr>
     <td class='ch' title='t1.1.60a16'>「云何十法向惡趣？ 謂十不善： 身殺、盜、婬，口兩舌、惡罵、妄言、綺語，意貪取、嫉妬、邪見。</td>
-    <td id='p40'>40. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and committing adultery, verbally being divisive, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.</td>
+    <td id='p40'>40. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and committing adultery, verbally being duplicitous, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.</td>
   </tr>
   <tr>
     <td class='ch' title='t1.1.60a18'>「云何十法向善趣？ 謂十善行： 身不殺、盜、婬，口不兩舌、惡罵、妄言、綺語，意不貪取、嫉妬、邪見。</td>
-    <td id='p41'>41. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.</td>
+    <td id='p41'>41. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being duplicitous, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.</td>
   </tr>
   <tr>
     <td class='ch' title='t1.1.60a20'>「云何十法向涅槃？ 謂十直道： 正見、正志、正語、正業、正命、正方便、正念、正定、正解脫、正智。</td>
