--- a/01_agama/ekottarika/13/EA_13_05.md
+++ b/01_agama/ekottarika/13/EA_13_05.md
@@ -39,19 +39,19 @@ next: EA_13_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.574a6'>「若彼賢聖弟子無瞋、無恚、無有、愚惑，心意和悦。 以慈心普滿一方而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無限、無量、不可稱計。 心無恚怒，而自遊戲。 以此慈心遍滿其中，得歡喜已，心意便正。</td>
-    <td id='p7'>7. “If that noble disciple has no anger, no hate, and no delusions, his mind will become peaceful and cheerful. He completely fills one direction with kindness, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with kindness and becomes joyous, his mind is proper.</td>
+    <td id='p7'>7. “If that noble disciple has no anger, no hate, and no delusions, his mind will become peaceful and cheerful. He completely fills one direction with kindness, and he delights himself. He does the same in two, three, and four directions, the four intercardinals, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with kindness and becomes joyous, his mind is proper.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.574a11'>「復，以悲心普滿一方，而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無量、無限、不可稱計。 心無恚怒，而自遊戲。 以此悲心遍滿其中，得歡喜已，心意便正。</td>
-    <td id='p8'>8. “Again, he completely fills one direction with compassion, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with compassion and becomes joyous, his mind is proper.</td>
+    <td id='p8'>8. “Again, he completely fills one direction with compassion, and he delights himself. He does the same in two, three, and four directions, the four intercardinals, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with compassion and becomes joyous, his mind is proper.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.574a15'>「復，以喜心普滿一方，而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無量、無限、不可稱計。 心無恚怒，而自遊戲。 以此喜心遍滿其中，得歡喜已，心意便正。</td>
-    <td id='p9'>9. “Again, he completely fills one direction with joy, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with equanimity and becomes joyous, his mind is proper.</td>
+    <td id='p9'>9. “Again, he completely fills one direction with joy, and he delights himself. He does the same in two, three, and four directions, the four intercardinals, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with equanimity and becomes joyous, his mind is proper.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.574a20'>「復，以護心普滿一方，而自娯樂。 二方、三方、四方亦爾、四維、上、下。 於一切中一切亦一切，一切世間，以無量、無限、不可稱計。 心無恚怒，而自遊戲。 以此護心遍滿其中，得歡喜已，心意便正。</td>
-    <td id='p10'>10. “Again, he completely fills one direction with equanimity, and he delights himself. He does the same in two, three, and four directions, the four counterpoints, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with joy and becomes joyous, his mind is proper.</td>
+    <td id='p10'>10. “Again, he completely fills one direction with equanimity, and he delights himself. He does the same in two, three, and four directions, the four intercardinals, above, and below. He does likewise in all these directions of the whole world, which is limitless, measureless, and inestimable. His mind has no anger or hate, and he delights himself. Once he completely fills them with joy and becomes joyous, his mind is proper.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.574a24'>「便於如來所成於信根。 根本不移䜿高顯幢，不可移動諸天、龍、神、阿須倫、沙門、婆羅門、或世人民。 於中得歡喜，心意便正。</td>
