--- a/01_agama/madhyama/MA_015.md
+++ b/01_agama/madhyama/MA_015.md
@@ -62,7 +62,7 @@ next: MA_016.html
 17\. “A well-versed noble disciple abandons unskillful physical deeds and cultivates skillful physical deeds. They abandon unskillful verbal and mental deeds and cultivate skillful verbal and mental deeds. That well-versed noble disciple thus perfects their effort, precepts, and virtue. Accomplishing pure physical deeds and accomplishing pure verbal and mental deeds, they’re free of anger and quarreling. They shake off sleepiness, aren’t arrogant, end doubt, and are freed from pride.
 {: #p17}
 
-18\. “With right mindfulness and right knowledge, they lack foolishness. They accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four counterpoints, and up and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad, vast, measureless, and well cultivated.
+18\. “With right mindfulness and right knowledge, they lack foolishness. They accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four intercardinals, and up and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad, vast, measureless, and well cultivated.
 {: #p18}
 
 19\. “They have this thought, ‘This mind of mine was small and not well cultivated in the past, but now this mind of mine is measureless and well cultivated.’ The well-versed noble disciple’s mind thus is measureless and well cultivated.
