--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -77,7 +77,7 @@ next: MA_077.html
 22\. “Furthermore, you should cultivate <em>samādhi</em> with perception and examination, <em>samādhi</em> with no perception and some examination, and <em>samādhi</em> without perception or examination. You should also cultivate <em>samādhi</em> together with joy, <em>samādhi</em> together with happiness, <em>samādhi</em> together with <em>samādhi</em>, and <em>samādhi</em> together with equanimity.
 {: #p22}
 
-23\. “Monk, suppose someone cultivates these <em>samādhi</em>s of utmost goodness. Monk, they accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four counterpoints, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
+23\. “Monk, suppose someone cultivates these <em>samādhi</em>s of utmost goodness. Monk, they accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four intercardinals, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {: #p23}
 
 24\. “So it is with compassion, joy, and equanimity. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
