--- a/01_agama/madhyama/MA_079.md
+++ b/01_agama/madhyama/MA_079.md
@@ -71,7 +71,7 @@ Venerable Aniruddha told him, “Wealthy man, give your own answer to this quest
 16\. “If they don’t base it on two or three trees, they base it on one grove … If they don’t base it on one grove, they base it on two or three groves … If they don’t base it on two or three groves, they base it on one village … If they don’t base it on one village, they base it on two or three villages … If they don’t base it on two or three villages, they base it on one country … If they don’t base it on one country, they base it on two or three countries … If they don’t base it on two or three countries, they base it on the Earth … the ocean. They are intent on accomplishing and dwelling in the liberation of the great mind, pervading the ocean with it. Their mind is liberated to that extent and doesn’t go beyond it. This is called the liberation of the great mind.
 {: #p16}
 
-17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or in an empty and peaceful dwelling. They accomplish and dwell in one direction pervaded with their mind and kindness. They do this in two, three, and four directions, the four counterpoints, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
+17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or in an empty and peaceful dwelling. They accomplish and dwell in one direction pervaded with their mind and kindness. They do this in two, three, and four directions, the four intercardinals, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {: #p17}
 
 18\. “<em>So it is with compassion, joy, and equanimity.</em> Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated. This is called the liberation of the measureless mind.
