--- a/01_agama/madhyama/MA_095.md
+++ b/01_agama/madhyama/MA_095.md
@@ -68,7 +68,7 @@ next: MA_096.html
 <p><em>covetous</em>. C. <span class="ch">增伺</span>, G. <em>avhij̄a</em>?, P. <em>abhijjhālu</em>, S. <em>abhidhyālu</em>. The C. translates S. <em>abhi-</em> (<span class="ch">增</span>) and <em>-dhyā</em> (<span class="ch">伺</span>) separately. The resulting expression means something like “increasing search.” The P. (and S.) word means “covetous.” The S. root <em>dhyā</em> had the basic meaning of “thinking,” hence the derivation of <em>dhyāna</em> for “meditation.” Here, it refers to thinking often of something desired.</p>
 <p><em>hateful</em>. C. <span class="ch">瞋恚心</span>, G. ?, P. <em>byāpannacitta</em>, S. <em>vyāpannacitta</em>. The C. lit. means “hateful thought,” which matches the reading of P. <em>byāpanna</em> better than S. <em>vyāpanna</em>, though S. <em>vyāpannacitta</em> was used to mean “maliciousness.”</p>
 <p><em>ensnared by drowsiness</em>. C. <span class="ch">睡眠纏</span>, G. <em>stinamidha</em>, P. <em>thinamiddhapariyuṭṭhita</em>, S. <em>styānamiddhaparyavasthita</em>. The C. translation lit. means “wrapped up” or “fettered by sleepiness.” The reading of S. <em>paryavasthāna</em> (syn. with <em>paryavasthita</em>) was apparently sometimes trans. to Tibetan as “complete wrapping up, ensnaring,” which agrees with <span class="ch">纏</span>.</p>
-<p><em>haughty</em>. C. <span class="ch">調貢高</span>, G. <em>udhida</em>, P. <em>uddhata</em>, S. <em>uddhata</em>. This term occurs in five other MĀ <em>sūtra</em>s (15, 16, 91, 95, and 96), making it unlikely to be a typo. There is an alternate reading that changes <span class="ch">調</span> to <span class="ch">掉</span>, which is a case of amending an older translation with a later one. <span class="ch">掉</span> has the meaning of “shaking, swinging, rocking,” which probably was intended to describe physical restlessness.</p>
+<p><em>haughty</em>. C. <span class="ch">調貢高</span>, G. <em>udhida</em>, P. <em>uddhata</em>, S. <em>uddhata</em>. This term occurs in five MĀ <em>sūtra</em>s (15, 16, 91, 95, and 96), making it unlikely to be a typo. There is an alternate reading that changes <span class="ch">調</span> to <span class="ch">掉</span>, which is a case of amending an older translation with a later one. <span class="ch">掉</span> has the meaning of “shaking, swinging, rocking,” which probably was intended to describe physical restlessness.</p>
 <p><span class="ch">調</span> is a term that occurs in parallel to P. <em>uddhacca</em> or <em>uddhata</em> in MĀ, but it doesn’t mean agitation. Its usual meaning is “to even out, harmonize, check over, tune.” A lesser known meaning was “to ridicule, make fun of” (cf. Gakken 1227). In MĀ, this term often occurs in tandem with <span class="ch">貢高</span>, which means “haughty, arrogant,” and this is indeed a reading of S. <em>uddhata</em>. It’s treated by P. references and translators as a variant spelling of <em>uddhacca</em> and translated as “agitated,” but here we see that it was interpreted as arrogance. This may well be a case of excessive leveling in P. sources, which served to eliminate variant readings by forcing standard meanings onto them.</p>
 <p><em>uncertain</em>. C. <span class="ch">疑惑</span>, G. <em>vicigitsa</em>, P. <em>vicikiccha</em>, S. <em>vicikitsā</em>. The C. translation lit. means “doubt and confusion, perplexity.”</p>
 <p><em>violent</em>. C. <span class="ch">身諍</span>, G. <em>krosana</em>, P. <em>kodhana</em>, S. <em>krodhana</em>. The C. translation lit. means “physical” or “personal quarrel,” which doesn’t match P. <em>kodhana</em>. However, P. <em>sāraddhakāya</em> occurs below in the place of “faith” in the P. list, which does mean physical violence or anger. I think that is likely the term that was translated here as <span class="ch">身諍</span>.</p>
