--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -80,7 +80,7 @@ The monks then accepted the teaching and listened.
 17\. “What is nirvāṇa without remainder? A monk ought to practice in this way: ‘I have no self, and nothing is mine. In the future, there’ll be no self, and nothing will be mine.’ He then ends what has been, and he attains equanimity after ending it. The pleasures he has don’t stain him, and he doesn’t cling to what has come together. Such a practitioner sees by the wisdom of unsurpassed stillness, and he has attained its realization.
 {: #p17}
 
-18\. “I say that monk doesn’t go east, and he doesn’t go west, south, north, the four counterpoints, up, or down. In the present life, he’s been stilled and completely liberated.
+18\. “I say that monk doesn’t go east, and he doesn’t go west, south, north, the four intercardinals, up, or down. In the present life, he’s been stilled and completely liberated.
 {: #p18}
 
 19\. “I had said, ‘I will explain the seven places to which a good person goes and nirvāṇa without remainder,’ and so I have explained it.”
