corrected capitalization of "Dynasty" to "dynasty"

--- a/01_agama/ekottarika/48/EA_48_04.md
+++ b/01_agama/ekottarika/48/EA_48_04.md
@@ -19,7 +19,7 @@ next: ../50/EA_50_06.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.790a5'>東晉罽賓三藏瞿曇僧伽提婆譯</td>
-    <td class="taisho_byline">Translated by the Kasmiri Tripiṭa Gautama Saṅghadeva during the Eastern Jin Dynasty (ca. 384-385 CE)</td>
+    <td class="taisho_byline">Translated by the Kasmiri Tripiṭa Gautama Saṅghadeva during the Eastern Jin dynasty (ca. 384-385 CE)</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.790a6'>不善品第四十八 入前品中</td>
