--- a/13_abhidharma/T1548/C15.md
+++ b/13_abhidharma/T1548/C15.md
@@ -19,7 +19,7 @@ next: index.html
   </tr>
   <tr>
     <td class='ch' title='t1548.28.606a18'>姚秦罽賓三藏曇摩耶舍共曇摩崛多等 譯</td>
-    <td class="taisho_byline">Translated by the Kasmiri Tripiṭa Dharmayaśas and Dharmagupta during Yao’s Qin Dynasty (ca. 414 CE)</td>
+    <td class="taisho_byline">Translated by the Kasmiri Tripiṭa Dharmayaśas and Dharmagupta during Yao’s Qin dynasty (ca. 414 CE)</td>
   </tr>
 <tr>
   <td class='ch' title='t1548.28.606a21'></td>
