--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -1238,7 +1238,7 @@ next: ../02/EA_02_01.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0549b12" target="_blank">T125.2.549b12-52c7</a>. I do not know of any direct parallels for this introduction, but it shares many elements with other texts. The story of Ānanda reciting the <em>sūtra</em>s has parallels in the various Vinaya accounts of the first council after the Buddha’s <em>parinirvāṇa</em>. King Dirghāyu and Makhadeva also are characters who appear in Buddhist <em>avadāna</em> texts, some of which are included in EBTs such as <a href="../madhyama/MA_072.html" target="_blank">MĀ 72</a> and <a href="suttacentral.net/mn83" target="_blank">MN 83</a>. The verse that Ānanda recites for Mahākāśyapa is a famous one: It’s verse 183 in the <cite>Dhammapāda</cite> and appears in a variety of sources such as DN 14, Vinaya texts, and parallels to the <cite>Dhammapāda</cite> in other languages. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0549b12" target="_blank">T125.2.549b12-52c7</a>. I do not know of any direct parallels for this introduction, but it shares many elements with other texts. The story of Ānanda reciting the <em>sūtra</em>s has parallels in the various Vinaya accounts of the First Council after the Buddha’s <em>parinirvāṇa</em>. King Dirghāyu and Makhadeva also are characters who appear in Buddhist <em>avadāna</em> texts, some of which are included in EBTs such as <a href="../madhyama/MA_072.html" target="_blank">MĀ 72</a> and <a href="suttacentral.net/mn83" target="_blank">MN 83</a>. The verse that Ānanda recites for Mahākāśyapa is a famous one: It’s verse 183 in the <cite>Dhammapāda</cite> and appears in a variety of sources such as DN 14, Vinaya texts, and parallels to the <cite>Dhammapāda</cite> in other languages. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>Śākyamuni.</em> C. <span class="ch">能仁</span>. Lit. “The Humane One.” This was an uncommon translation of Śākyamuni.</p>
 <p><em>Seventh Sage.</em> This refers to the Buddha being the last of a lineage of seven Buddhas. For sources on the topic, see the <cite>Mahāvadāna Sūtra</cite> and its parallels (<a href="../../dirgha/DA_1.html" target="_blank">DĀ 1</a>, <a href="https://suttacentral.net/dn14" target="_blank">DN 14</a>, EĀ 48.4, and Taisho 2-4).</p>
 <p><em>Unsurpassed law.</em> C. <span class="ch">無上軌</span>. Here, S. <em>dharma</em> has been translated as “law” (<span class="ch">軌</span>), which is also the meaning of the usual C. translation (<span class="ch">法</span>). [<a href="#ref2">back</a>]</p></li> 
@@ -1262,7 +1262,7 @@ next: ../02/EA_02_01.html
 <li id="n17"><p>This is the opening of the first <em>sūtra</em> of the <cite>Ekottarika Āgama</cite> (EĀ 2.1). [<a href="#ref17">back</a>]</p></li> 
 <li id="n18"><p>This discribes the contents of Chapters 3 and 4. Kauṇḍinya was the first to understand the four noble truths, and this Subhadra is likely the last to be liberated just before the Buddha <em>parinirvāṇa</em>-ed. [<a href="#ref18">back</a>]</p></li> 
 <li id="n19"><p><em>a mixed piṭaka.</em> C. <span class="ch">雜藏</span>. This translation suggests that the fourth <em>piṭaka</em> in this school’s canon was called S. <cite>Saṃyukta</cite> rather than S. <cite>Kṣudraka</cite>. Nonetheless, the description sounds similar to the Theravāda’s <cite>Khuddaka Nikāya</cite>, containing a <em>jātaka</em> collection of stories illustrating the Bodhisattva’s practice and other <em>sūtra</em> collections. We are left to wonder what texts specifically were meant by the “expansive Mahāyāna doctrine” (C. <span class="ch">方等大乘義</span>, S. <em>vaipulya mahāyāna artha</em>). We can only guess. [<a href="#ref19">back</a>]</p></li> 
-<li id="n20"><p>This last line implies that Ānanda is not yet an <em>arhat</em> after reciting and organizing the <em>sūtra</em>s. Other accounts of these events depict a conflict between Mahākāśyapa and Ānanda, the former forcing the latter to finish the task of becoming an <em>arhat</em> before allowing him into the council proceedings. This was apparently one of the many disagreements between the early schools: Whether someone not yet an <em>arhat</em> could possess wisdom or not. Ānanda was the principle example, and Vinaya accounts of the first council were written according to the position taken. Apparently, the author(s) of this account were among the camp that held that a trainee could be wise. [<a href="#ref20">back</a>]</p></li> 
+<li id="n20"><p>This last line implies that Ānanda is not yet an <em>arhat</em> after reciting and organizing the <em>sūtra</em>s. Other accounts of these events depict a conflict between Mahākāśyapa and Ānanda, the former forcing the latter to finish the task of becoming an <em>arhat</em> before allowing him into the council proceedings. This was apparently one of the many disagreements between the early schools: Whether someone not yet an <em>arhat</em> could possess wisdom or not. Ānanda was the principle example, and Vinaya accounts of the First Council were written according to the position taken. Apparently, the author(s) of this account were among the camp that held that a trainee could be wise. [<a href="#ref20">back</a>]</p></li> 
 <li id="n21"><p><em>Paranirmitavaśavartin gods … Nirmāṇarati gods.</em> The Taisho edition has the order of these heavens reversed, which is the result of a single character (<span class="ch">他</span>) being moved from one to the other. I’ve corrected the typo in my translation. [<a href="#ref21">back</a>]</p></li> 
 <li id="n22"><p><em>Ekottara.</em> C. <span class="ch">伊倶優多羅</span> (EMC. i-kɪu ɪəu-ta-la = G. <em>*ekutara</em>). The G. equivalent of S. <em>ekottarika</em> is attested as G. <em>ekutariga</em>. The C. transliteration here looks very close to G. <em>ekutara</em>, so I’ve adopted the S. equivalent as a best guess.</p>
 <p><em>Mukhottara.</em> C. <span class="ch">目伽優多羅</span> (EMC. mɪuk-k‘ie ɪəu-ta-la = G. <em>*mukhetara</em>). <span class="ch">目伽</span> most likely transliterates G. <em>mukha</em>, so I’ve adopted the S. equiv. of G. <em>Mukha+utara</em>.</p>
