--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -201,7 +201,7 @@ next: MA_002.html
 <li id="n1"><p>The present text was a re-translation of a version of the <cite>Madhyama Āgama</cite> that had been translated to Chinese by Dao-an’s Chang’an team around 385 CE. This new translation was completed in 398 and released in 402 by a team that worked at a <em>vihāra</em> in modern Nanjing.</p>
 <p>The intervening years had seen a significant amount of warfare and political chaos that resulted from the defeat of Fu Jian’s attempt to conquer southern China. His empire in northern China subsequently broke up into smaller states, while the south remained under the control of the Eastern Jin dynasty. Dao-an’s translation team had worked under Fu Jian’s auspices and found themselves in the middle of the fighting when Chang’an fell shortly after their translation of the <cite>Ekottarika Āgama</cite> was complete.</p>
 <p>While Dao-an perished, several members of his team escaped to continue their translation work. One of them was Gautama Saṅghadeva who joined the translation project in Nanjing to produce a second translation of the <cite>Medium Discourses</cite>.</p>
-<p>The political chaos continued, however, and their work was interrupted in 399 by a destructive rebellion that took several years to resolve. This resulted in a delayed release of their new translation in 402. Despite these difficulties, the new translation was well-edited and has been well-perserved, unlike the unfortunate situation that we have with other Āgama translations from the same period. The first translation of the <cite>Madhyama Āgama</cite> was apparently poorly edited and/or maintained. As a result, this new translation supplanted it, and it eventually disappeared. [<a href="#ref1">back</a>]</p></li>
+<p>The political chaos continued, however, and their work was interrupted in 399 by a destructive rebellion that took several years to resolve. This resulted in a delayed release of their new translation in 402. Despite these difficulties, the new translation was well-edited and has been well-preserved, unlike the unfortunate situation that we have with other Āgama translations from the same period. The first translation of the <cite>Madhyama Āgama</cite> was apparently poorly edited and/or maintained. As a result, this new translation supplanted it, and it eventually disappeared. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. The correct reading of this <em>sūtra</em>’s title would appear to be “Skillful Qualities” given the occurrence of <span class="ch">善法</span> in <a href="MA_095.html" target="_blank">MĀ 95</a>, which has a list of skillful qualities as its subject. Here, we have another such list of skillful qualities that make one a competent renunciate.</p>
 <p>Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, <a href="https://suttacentral.net/ea39.1" target="_blank">EĀ 39.1</a>, <a href="https://suttacentral.net/T27" target="_blank">T27</a>, and a passage in the Mahāyāna <cite>Parinirvāṇa Sūtra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0374_p0451b13" target="_blank">T374</a> and <a href="https://cbetaonline.dila.edu.tw/zh/T12n0375_p0693b14" target="_blank">T375</a>). The same list of seven things a monk should know is also found in a variety of sources, such as <a href="https://cbetaonline.dila.edu.tw/zh/T01n0006_p0176c20" target="_blank">T6</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T01n0013_p0236c23" target="_blank">T13</a>, <a href="https://suttacentral.net/dn33#2.3.14" target="_blank">DN 33</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T24n1451_p0383c12" target="_blank">T1451</a>, and in the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b18" target="_blank">T1536.26.437b18-c10</a>).</p>
 <p>The consistency of the list, which is virtually the same in meaning and order across these various parallels, indicates that it was an important pre-sectarian teaching. However, the interpretation of the list items varies between sectarian traditions, indicating that the explanations were recorded later. [<a href="#ref2">back</a>]</p></li>
