--- a/01_agama/madhyama/MA_034.md
+++ b/01_agama/madhyama/MA_034.md
@@ -107,7 +107,7 @@ next: MA_036.html
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0475a11" target="_blank">T26.1.475a11-c15</a>. The only known parallel is <a href="https://suttacentral.net/mn124" target="_blank">MN 124</a>.</p>
 <p>While the introduction here indicates that these events occurred shortly after the Buddha’s <em>parinirvāṇa</em>, MN 124 is silent on this point. Bhikkhu Bodhi reports that the commentary to MN 124 says that it was added to the canon a hundred years after the Buddha. This might explain the interlinear commentary declaring Bākula’s unprecedented qualities. The Buddha wasn’t present to declare it himself, so the compilers added their own declaration. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>a heretic who had been a good friend of Venerable Bakula.</em> Bakula’s interlocutor goes nameless throughout this <em>sūtra</em>. He is called “[someone of] another training” or “a heterodox [person]” <span class="ch">異學</span>, which I take to be a translation of S. <em>tīrthika</em>. This was an epithet that seems to usually apply to adherents of other ascetic traditions. In MN 124, he is identified as the naked ascetic Kassapa. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>This is called an unprecedented quality of Venerable Bakula.</em> According to the Pali commentary to MN 124, this statement is the voice of the compilers of the canon during the second council a hundred years after the Buddha’s <em>parinirvāṇa</em>. Here in this version, it’s clear that there is a change in speaker because Bakula is spoken of in the third person. I’ve therefore set it off in italics as a comment by the narrator.</p>
+<li id="n3"><p><em>This is called an unprecedented quality of Venerable Bakula.</em> According to the Pali commentary to MN 124, this statement is the voice of the compilers of the canon during the Second Council a hundred years after the Buddha’s <em>parinirvāṇa</em>. Here in this version, it’s clear that there is a change in speaker because Bakula is spoken of in the third person. I’ve therefore set it off in italics as a comment by the narrator.</p>
 <p>This statement by Bakula that he had no pride about his virtue is repeated twice more below. These additional statements are not found in MN 124. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p>MN 124 adds the lack of notions of ill-will (P. <em>byāpādasañña</em>), cruelty (<em>vihiṁsāsañña</em>), and thoughts (<em>vitakka</em>) of desire, ill-will, and cruelty after this virtue. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p>MN 124 begins with the same two items in this section, and then continues with dyeing robes, sewing robes during the robe-making ceremony, and wandering in search of material for another monk making robes. Despite their differences, both versions arrive at six robe-related virtues. [<a href="#ref5">back</a>]</p></li>
