added link to ref in MA 1

--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -208,7 +208,7 @@ next: MA_002.html
 <li id="n3"><p>This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order of these lists varied from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>.</p>
 <p>I had previously translated <em>vyākaraṇa</em> as “assurances” because there is a strong bias toward reading this term as a prediction given by the Buddha about a disciple’s future births or awakening in later Buddhist literature. In Sanskrit, <em>vyākaraṇa</em> has this meaning, but it also can mean “detailed explanation” or “analysis.” Since the last time I reviewed this translation, I’ve seen definitions of <em>vyākaraṇa</em> from early Buddhist perspectives that interpret <em>vyākaraṇa sūtra</em>s as those in which the Buddha gave a particular disciple a teaching about a subject or his disciples gave their own analysis of a subject. I’ve therefore decided to adopt “explanations” as a better English translation.</p>
 <p>This is also the only version of this list that characterizes it with S. <em>samyak</em> (<span class="ch">正</span>). I assume it means “correct” in the sense that they are authentic teachings that descend from the Buddha and First Council. I’ve chosen “proper” as a translation here. [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p>This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (<span class="ch">謂此時應修止相⋯舉相⋯捨相等</span>). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position, as the terms used are <span class="ch">下</span> (“lowly”), <span class="ch">高</span> (“eminent”), and <span class="ch">捨</span> (“detached”). [<a href="#ref4">back</a>]</p></li>
+<li id="n4"><p>This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b24" target="_blank">T1536.26.437b24-6</a>) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (<span class="ch">謂此時應修止相⋯舉相⋯捨相等</span>). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position, as the terms used are <span class="ch">下</span> (“lowly”), <span class="ch">高</span> (“eminent”), and <span class="ch">捨</span> (“detached”). [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p><em>relieving himself</em>. C. <span class="ch">大小便</span>. This Chinese expression is a euphemism for defecating and urinating. [<a href="#ref5">back</a>]</p></li>
 <li id="n6"><p><em>warriors … brahmins … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were influential people due to their wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life.</p>
 <p>Brahmins often served as administrators and priests in ancient India. Later in history, they more closely resembled a class of people defined by their profession, but originally they were a distinct ethnic group or tribe. Class and tribal identities blurred together in Indian civilization because of the practice of assigning tribes to particular professions. I don’t translate S. <em>brāhmaṇa</em> to “priest” anymore because they were not always priests, but they did hold a high social standing regardless of their profession. [<a href="#ref6">back</a>]</p></li>
